--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,6 +36,9 @@ dependencies:
   cupertino_icons: ^1.0.6
   http: ^1.2.1
   animate_do: ^3.3.4
+  flutter_slidable: ^3.1.0
+  sqflite: ^2.3.3
+  path_provider: ^2.1.3
 
 dev_dependencies:
   flutter_test:
