--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,8 @@ dependencies:
   flutter_slidable: ^3.1.0
   sqflite: ^2.3.3
   path_provider: ^2.1.3
+  google_fonts: ^6.2.1
+  image_picker: ^1.1.0
 
 dev_dependencies:
   flutter_test:
